--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+h2 {
+    font-size: 32px;
+    font-weight: 700;
+    color: rgb(255, 0, 157);
+}
+
+h3 {
+    font-weight: 400;
+    color: rgb(255, 0, 157);
+}
+
+p {
+    font-style: italic;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
